--- a/peta_inter.html
+++ b/peta_inter.html
@@ -118,6 +118,15 @@
           <iframe src="qgis2web_2025_06_09-22_33_01_592984/index.html" allowfullscreen title="Peta Interaktif" frameborder="0" class="responsive-iframe"> </iframe>
         </div>
       </section>
+      <div class="iframe-container">
+          <iframe src="https://4962-103-3-220-255.ngrok-free.app/mapstore/#/viewer/66" allowfullscreen title="Peta Interaktif" frameborder="0" class="responsive-iframe"> </iframe>
+        </div>
+      </section>
+      <section id="about" class="about section light-background">
+        <div class="iframe-container">
+          <iframe src="https://4962-103-3-220-255.ngrok-free.app/mapstore/#/dashboard/71" allowfullscreen title="Peta Interaktif" frameborder="0" class="responsive-iframe"> </iframe>
+        </div>
+      </section>
       <!-- /About Section -->
     </main>
 
