--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
           <div id="map"></div>
           <center><iframe style="border: none" height="1000" width="1200" src="https://4962-103-3-220-255.ngrok-free.app/mapstore/#/dashboard/71"></iframe></center>
         </div>
+        <div class="container">
+          <div id="map"></div>
+          <center><iframe style="border: none" height="1000" width="1200" src="qgis2web_2025_06_09-22_33_01_592984/index.html"></iframe></center>
+        </div>
 
         <!-- Informasi Tambahan -->
         <div class="row gy-4 align-items-center features-item">
