--- a/index.html
+++ b/index.html
@@ -30,10 +30,23 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" crossorigin=""></script>
     <link rel="stylesheet" href="CSS mini project.css" />
+
+    <style>
+      .ratio iframe {
+        width: 100%;
+        height: 100%;
+        border: 0;
+        display: block;
+      }
+      img[loading="lazy"] {
+        width: 100%;
+        height: auto;
+        display: block;
+      }
+    </style>
   </head>
 
   <body class="index-page">
@@ -42,7 +55,6 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <h1 class="sitename">Wonderful Klaten</h1>
         </a>
-
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="index.html" class="active">Beranda</a></li>
@@ -72,7 +84,7 @@
       </div>
     </header>
 
-    <main class="main">
+    <main class="main" style="margin-top: 70px">
       <!-- Hero Section -->
       <section id="hero" class="hero section dark-background">
         <div id="hero-carousel" class="carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
@@ -84,8 +96,6 @@
                 <a href="about.html" class="btn-get-started">Pelajari Lebih Lanjut</a>
               </div>
             </div>
-            <!-- End Carousel Item -->
-
             <div class="carousel-item">
               <div class="carousel-container">
                 <h2>Peta Interaktif</h2>
@@ -93,8 +103,6 @@
                 <a href="peta_inter.html" class="btn-get-started">Lihat Peta</a>
               </div>
             </div>
-            <!-- End Carousel Item -->
-
             <div class="carousel-item">
               <div class="carousel-container">
                 <h2>Analisis Spasial</h2>
@@ -102,16 +110,12 @@
                 <a href="unduh_data.html" class="btn-get-started">Cek Layanan</a>
               </div>
             </div>
-            <!-- End Carousel Item -->
-
             <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
               <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
             </a>
-
             <a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slide="next">
               <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
             </a>
-
             <ol class="carousel-indicators"></ol>
           </div>
         </div>
@@ -124,55 +128,32 @@
           <div class="row gy-4">
             <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item item-cyan position-relative">
-                <div class="icon">
-                  <i class="bi bi-map"></i>
-                </div>
-                <a href="peta_inter.html" class="stretched-link">
-                  <h3>Peta Interaktif</h3>
-                </a>
+                <div class="icon"><i class="bi bi-map"></i></div>
+                <a href="peta_inter.html" class="stretched-link"><h3>Peta Interaktif</h3></a>
                 <p>Tampilkan informasi geografis secara real-time dengan peta interaktif yang mudah diakses.</p>
               </div>
             </div>
-            <!-- End Service Item -->
-
             <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
               <div class="service-item item-orange position-relative">
-                <div class="icon">
-                  <i class="bi bi-graph-up"></i>
-                </div>
-                <a href="dashboard_diagram.html" class="stretched-link">
-                  <h3>Statistik Wisata</h3>
-                </a>
+                <div class="icon"><i class="bi bi-graph-up"></i></div>
+                <a href="dashboard_diagram.html" class="stretched-link"><h3>Statistik Wisata</h3></a>
                 <p>Lihat statistik wisata klaten dalam diagram dan tabel yang representatif dan intuitif</p>
               </div>
             </div>
-            <!-- End Service Item -->
-
             <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
               <div class="service-item item-teal position-relative">
-                <div class="icon">
-                  <i class="bi bi-cloud-sun"></i>
-                </div>
-                <a href="fas_terdekat.html" class="stretched-link">
-                  <h3>Analisis Spasial</h3>
-                </a>
+                <div class="icon"><i class="bi bi-cloud-sun"></i></div>
+                <a href="fas_terdekat.html" class="stretched-link"><h3>Analisis Spasial</h3></a>
                 <p>Cek dulu sebelum ke objek wisata</p>
               </div>
             </div>
-            <!-- End Service Item -->
-
             <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
               <div class="service-item item-red position-relative">
-                <div class="icon">
-                  <i class="bi bi-geo-alt"></i>
-                </div>
-                <a href="unduh_data.html" class="stretched-link">
-                  <h3>Unduh Data Geospasial</h3>
-                </a>
+                <div class="icon"><i class="bi bi-geo-alt"></i></div>
+                <a href="unduh_data.html" class="stretched-link"><h3>Unduh Data Geospasial</h3></a>
                 <p>Unduh Data Spasial terupdate yang kamu butuhkan.</p>
               </div>
             </div>
-            <!-- End Service Item -->
           </div>
         </div>
       </section>
@@ -183,12 +164,12 @@
         <div class="container">
           <div class="row gy-4">
             <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/satelit-l-min.jpg" class="img-fluid" alt="Ilustrasi Geo.io" />
+              <img src="assets/img/satelit-l-min.jpg" class="img-fluid" alt="Ilustrasi Geo.io" loading="lazy" />
               <a href="https://www.youtube.com/watch?v=bhYiN5W-TDA" class="glightbox pulsating-play-btn"></a>
             </div>
             <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
               <h3>Mengenal Wonderful Klaten</h3>
-              <p class="fst-italic">sistem informasi geografis yang menyajikan data spasial dan peta interaktif untuk mendukung eksplorasi destinasi objek wisata air yang ramah lingkungan dengan fasilitas terpadu.</p>
+              <p class="fst-italic">Sistem informasi geografis yang menyajikan data spasial dan peta interaktif untuk mendukung eksplorasi destinasi objek wisata air yang ramah lingkungan dengan fasilitas terpadu.</p>
               <ul>
                 <li><i class="bi bi-check2-all"></i> <span>Peta interaktif dengan data terudpate secara berkala.</span></li>
                 <li><i class="bi bi-check2-all"></i> <span>Analisis spasial untuk mendeteksi potensi di sekitar objek wisata</span></li>
@@ -201,46 +182,49 @@
       </section>
       <!-- /Tentang Kami Section -->
 
+      <!-- Wisata Air & Peta Interaktif -->
       <section id="features" class="features section">
-        <!-- Judul Section -->
         <div class="container section-title" data-aos="fade-up">
           <h2>Wisata Air</h2>
           <p>Peta Interaktif objek wisata Air</p>
         </div>
-        <!-- End Judul Section -->
+        <div class="container mb-4">
+          <div class="ratio ratio-16x9 mb-4">
+            <iframe src="https://4962-103-3-220-255.ngrok-free.app/mapstore/#/dashboard/71" loading="lazy" title="Peta Interaktif 1"></iframe>
+          </div>
+        </div>
         <div class="container">
-          <div id="map"></div>
-          <center><iframe style="border: none" height="1000" width="1200" src="https://4962-103-3-220-255.ngrok-free.app/mapstore/#/dashboard/71"></iframe></center>
-        </div>
-
-        <!-- Informasi Tambahan -->
-        <div class="row gy-4 align-items-center features-item">
-          <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out">
-            <iframe src="qgis2web_2025_06_09-20_41_31_719199/index.html" width="800" height="600"></iframe>
+          <div class="row gy-4 align-items-center features-item">
+            <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out">
+              <div class="ratio ratio-4x3 w-100">
+                <iframe src="qgis2web_2025_06_09-20_41_31_719199/index.html" loading="lazy" title="Analisis Geospasial"></iframe>
+              </div>
+            </div>
+            <div class="col-md-7" data-aos="fade-up">
+              <h3>Analisis Data Geospasial</h3>
+              <p>Memanfaatkan data periodic Updated untuk analisis tren dan prediksi risiko bencana guna mendukung keputusan strategis.</p>
+              <ul>
+                <li><i class="bi bi-check"></i> <span>Integrasi data dari berbagai sumber.</span></li>
+                <li><i class="bi bi-check"></i> <span>Pemetaan risiko dengan akurasi tinggi.</span></li>
+                <li><i class="bi bi-check"></i> <span>Pembaruan data secara berkala.</span></li>
+              </ul>
+            </div>
           </div>
-          <div class="col-md-7" data-aos="fade-up">
-            <h3>Analisis Data Geospasial</h3>
-            <p>Memanfaatkan data periodic Updated untuk analisis tren dan prediksi risiko bencana guna mendukung keputusan strategis.</p>
-            <ul>
-              <li><i class="bi bi-check"></i> <span>Integrasi data dari berbagai sumber.</span></li>
-              <li><i class="bi bi-check"></i> <span>Pemetaan risiko dengan akurasi tinggi.</span></li>
-              <li><i class="bi bi-check"></i> <span>Pembaruan data secara berkala.</span></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row gy-4 align-items-center features-item">
-          <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out">
-            <iframe src="qgis2web_2025_06_09-20_34_14_266666/index.html" width="800" height="600"></iframe>
-          </div>
-          <div class="col-md-7 order-2 order-md-1" data-aos="fade-up">
-            <h3>Monitoring Lingkungan</h3>
-            <p class="fst-italic">Pantau kondisi lingkungan di sekitar objek wisata</p>
-            <p>Website menyediakan akses ke data lingkungan dan cuaca teruptade, yang membantu masyarakat dan pihak terkait dalam melakukan respons cepat terhadap situasi darurat.</p>
+          <div class="row gy-4 align-items-center features-item">
+            <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out">
+              <div class="ratio ratio-4x3 w-100">
+                <iframe src="qgis2web_2025_06_09-20_34_14_266666/index.html" loading="lazy" title="Monitoring Lingkungan"></iframe>
+              </div>
+            </div>
+            <div class="col-md-7 order-2 order-md-1" data-aos="fade-up">
+              <h3>Monitoring Lingkungan</h3>
+              <p class="fst-italic">Pantau kondisi lingkungan di sekitar objek wisata</p>
+              <p>Website menyediakan akses ke data lingkungan dan cuaca teruptade, yang membantu masyarakat dan pihak terkait dalam melakukan respons cepat terhadap situasi darurat.</p>
+            </div>
           </div>
         </div>
       </section>
-      <!-- /Peta Risiko Bencana Section -->
+      <!-- /Wisata Air & Peta Interaktif -->
     </main>
 
     <footer id="footer" class="footer dark-background">
@@ -251,7 +235,6 @@
               <span class="sitename">Wonderful Klaten</span>
             </a>
           </div>
-
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Tautan Cepat</h4>
             <ul>
@@ -261,7 +244,6 @@
               <li><i class="bi bi-chevron-right"></i> <a href="contact.html">Kontak</a></li>
             </ul>
           </div>
-
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Layanan Kami</h4>
             <ul>
@@ -271,7 +253,6 @@
               <li><i class="bi bi-chevron-right"></i> <a href="unduh_data.html">Unduh Data Spasial</a></li>
             </ul>
           </div>
-
           <div class="col-lg-4 col-md-12">
             <h4>Ikuti Kami</h4>
             <p>Dapatkan informasi terbaru seputar geospasial, peta interaktif, dan analisis data dari berbagai platform sosial.</p>
@@ -284,33 +265,25 @@
           </div>
         </div>
       </div>
-
-      <div class="container copyright text-center mt-4">
-        <p>© <span>Hak Cipta</span> <strong class="px-1 sitename">Wonderful Klaten</strong> <span>Semua Hak Dilindungi</span></p>
-        <div class="credits">Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a></div>
-      </div>
+      <div class="container copyright text-center mt-4">&copy; 2025 Wonderful Klaten. All Rights Reserved.</div>
     </footer>
 
-    <!-- Tombol Scroll Atas -->
-    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
-      <i class="bi bi-arrow-up-short"></i>
-    </a>
-
-    <!-- Preloader -->
-    <div id="preloader"></div>
-
-    <!-- Vendor JS Files -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-
-    <!-- Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <!-- JS Vendor (pakai defer/async untuk percepat load) -->
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+    <script src="assets/vendor/aos/aos.js" defer></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js" defer></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js" defer></script>
+    <script src="assets/js/main.js" defer></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        if (typeof AOS !== "undefined") AOS.init();
+        if (typeof GLightbox !== "undefined") GLightbox();
+        document.querySelectorAll(".mobile-nav-toggle").forEach(function (btn) {
+          btn.addEventListener("click", function () {
+            document.getElementById("navmenu").classList.toggle("open");
+          });
+        });
+      });
+    </script>
   </body>
 </html>
