--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="container">
           <div class="row gy-4">
             <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/satelit-l-min.jpg" class="img-fluid" alt="Ilustrasi Geo.io" loading="lazy" />
+              <img src="assets/img/klt.jpg" class="img-fluid" alt="Ilustrasi Geo.io" loading="lazy" />
               <a href="https://www.youtube.com/watch?v=bhYiN5W-TDA" class="glightbox pulsating-play-btn"></a>
             </div>
             <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
