--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="row gy-4 align-items-center features-item">
             <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out">
               <div class="ratio ratio-4x3 w-100">
-                <iframe src="qgis2web_2025_06_09-20_41_31_719199/index.html" loading="lazy" title="Analisis Geospasial"></iframe>
+                <iframe src="qgis2web_2025_06_09-20_41_31_719199/index.html"  title="Analisis Geospasial"></iframe>
               </div>
             </div>
             <div class="col-md-7" data-aos="fade-up">
@@ -213,7 +213,7 @@
           <div class="row gy-4 align-items-center features-item">
             <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out">
               <div class="ratio ratio-4x3 w-100">
-                <iframe src="qgis2web_2025_06_09-20_34_14_266666/index.html" loading="lazy" title="Monitoring Lingkungan"></iframe>
+                <iframe src="qgis2web_2025_06_09-20_34_14_266666/index.html"  title="Monitoring Lingkungan"></iframe>
               </div>
             </div>
             <div class="col-md-7 order-2 order-md-1" data-aos="fade-up">
