--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="row gy-4">
             <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/klt.jpg" class="img-fluid" alt="Ilustrasi Geo.io"  />
-              <a href="https://www.youtube.com/watch?v=bhYiN5W-TDA" class="glightbox pulsating-play-btn"></a>
+              <a href="https://youtu.be/pw5jL2xav2A?feature=shared" class="glightbox pulsating-play-btn"></a>
             </div>
             <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
               <h3>Mengenal Wonderful Klaten</h3>
@@ -268,6 +268,8 @@
       <div class="container copyright text-center mt-4">&copy; 2025 Wonderful Klaten. All Rights Reserved.</div>
     </footer>
 
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    
     <!-- JS Vendor (pakai defer/async untuk percepat load) -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
     <script src="assets/vendor/aos/aos.js" defer></script>
